# ZanderMCP

./: .env  .env.example  .gitignore  ADVANCED_FEATURES.md  ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT.md  README.md  __init__.py  config.yaml  docker-compose.yml  fastmcp.json  pyproject.toml  server.py
alembic/: env.py
alembic/versions/: 920df5c66454_initial_schema_with_timescaledb_.py
classifiers/: base.py  signal_processing.py
database/: connection.py  models.py  persistence.py
edge_relay/: edge_relay_config.yaml  relay.py
ingestion/: stream_buffer.py  websocket_server.py
signal_processing/: features.py  preprocessing.py
tools/: history.py  realtime.py  session.py
